; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_util.c_gen_buffer.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_util.c_gen_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_ARRAY_BUFFER = common dso_local global i32 0, align 4
@GL_STATIC_DRAW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gen_buffer(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = call i32 @glGenBuffers(i32 1, i32* %5)
  %7 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @glBindBuffer(i32 %7, i32 %8)
  %10 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @GL_STATIC_DRAW, align 4
  %14 = call i32 @glBufferData(i32 %10, i32 %11, i32* %12, i32 %13)
  %15 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %16 = call i32 @glBindBuffer(i32 %15, i32 0)
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @glGenBuffers(i32, i32*) #1

declare dso_local i32 @glBindBuffer(i32, i32) #1

declare dso_local i32 @glBufferData(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
